<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="5"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:src="@drawable/logo"
        android:contentDescription="Logo"
        android:textColor="@color/white"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">


        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/welcome_blw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_below"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:padding="12dp"
            android:text="@string/login_lbl"/>

        <TextView android:id="@+id/signup_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@drawable/text_color"
            android:text="@string/signup_link"
            android:gravity="center"
            android:clickable="true"
            android:textSize="16sp"/>

    </LinearLayout>




</LinearLayout>
