<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#d2d1d1"
        >

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:text="@string/forget_pwd"
            android:textColor="@drawable/text_color"
            android:clickable="true"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/white"
                android:text="@string/login_lbl"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/input_layout_login"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:layout_above="@id/login_footer"
            android:paddingTop="34dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/username_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_lbl"
                android:textColor="@color/my_primary_dark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:paddingTop="0dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:paddingTop="0dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/pwd_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_lbl"
                android:textColor="@color/my_primary_dark"/>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                app:errorEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone|flagNoEnterAction"
                    android:paddingTop="0dp"/>
            </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/login_text"
        android:layout_above="@id/input_layout_login"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/my_primary_dark"
        android:gravity="bottom"
        android:shadowColor="@color/my_accent"
        android:shadowDx="1.5"
        android:shadowDy="3"
        android:shadowRadius="14.5"
        android:text="Log in"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"/>



    </RelativeLayout>


